Added implementation which saves response directly to db, pom cleanup, added endpoints do save and get data from db, added mapper